# strata

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  strata.ps1
.github/workflows/: ci.yml  pages.yml
data/: .gitkeep
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/bronze/: _bronze__sources.yml  bronze_agents.sql  bronze_claims.sql  bronze_customer_snapshots.sql  bronze_policies.sql  bronze_premium_payments.sql
dbt/models/gold/: _gold__models.yml  gold_fct_claims.sql  gold_fct_premium_payments.sql  gold_policy_performance.sql  gold_rpt_data_quality.sql  gold_rpt_reconciliation.sql
dbt/models/silver/: _silver__models.yml  silver_agents.sql  silver_claims.sql  silver_dim_customer.sql  silver_policies.sql  silver_premium_payments.sql
dbt/tests/: assert_loss_ratio_non_negative.sql  assert_scd2_one_current_per_customer.sql  assert_scd2_spans_contiguous.sql  assert_silver_not_larger_than_bronze.sql
docs/: architecture.md
generate/: __init__.py  __main__.py  domain.py
scripts/: show_reports.py
