[project]
name = "strata"
version = "1.0.0"
description = "Synthetic insurance data platform: a runnable, production-realistic medallion pipeline on DuckDB + dbt."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "dbt-duckdb>=1.9",
    "duckdb>=1.1",
    "faker>=20",
    "numpy>=1.26",
    "polars>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["generate"]
